possible to distinguish activated windows and fix errors in toggling visibility of windows

--- a/appserver/static/components/modaltextmsg/modaltextmsg.css
+++ b/appserver/static/components/modaltextmsg/modaltextmsg.css
@@ -13,6 +13,11 @@
   z-index: 200000;
 }
 
+.modal-text-msg-unactivated {
+  display: none !important;
+}
+.modal-text-msg-activated {}
+
 .modal-text-msg > .modal-body {
   padding: 15px 20px 10px 20px;
   max-height: 800px;
